@@ -15,8 +15,8 @@
  */
 package org.labkey.test.tests.targetedms;
 
-import org.apache.commons.collections4.Bag;
-import org.apache.commons.collections4.bag.HashBag;
+import org.apache.commons.collections4.MultiSet;
+import org.apache.commons.collections4.multiset.HashMultiSet;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -307,6 +307,12 @@ public class TargetedMSQCTest extends TargetedMSTest
         assertNotEquals(initialSVGText, qcPlotsWebPart.getSVGPlotText("precursorPlot0"));
         qcPlotsWebPart.setGroupXAxisValuesByDate(false);
 
+        // test option to group X-Axis values by Calendar (time-scaled date axis)
+        initialSVGText = qcPlotsWebPart.getSVGPlotText("precursorPlot0");
+        qcPlotsWebPart.setGroupXAxisValuesByCalendar(true);
+        assertNotEquals(initialSVGText, qcPlotsWebPart.getSVGPlotText("precursorPlot0"));
+        qcPlotsWebPart.setGroupXAxisValuesByCalendar(false);
+
         // test that plot0 changes based on scale
         for (QCPlotsWebPart.Scale scale : QCPlotsWebPart.Scale.values())
         {
@@ -409,6 +415,13 @@ public class TargetedMSQCTest extends TargetedMSTest
         stopImpersonating();
         goToProjectHome();
         qcPlotsWebPart = qcDashboard.getQcPlotsWebPart();
+
+        // verify the Calendar X-axis grouping option also round-trips on refresh
+        qcPlotsWebPart.setGroupXAxisValuesByCalendar(true);
+        refresh();
+        qcPlotsWebPart = qcDashboard.getQcPlotsWebPart();
+        qcPlotsWebPart.waitForPlots(2);
+        assertTrue("Calendar X-Axis grouping not round tripped as expected", qcPlotsWebPart.isGroupXAxisValuesByCalendarChecked());
 
         // reset plot type selection
         qcPlotsWebPart.resetInitialQCPlotFields();
@@ -602,7 +615,8 @@ public class TargetedMSQCTest extends TargetedMSTest
         PanoramaDashboard qcDashboard = new PanoramaDashboard(this);
         QCPlotsWebPart qcPlotsWebPart = qcDashboard.getQcPlotsWebPart();
         qcPlotsWebPart.resetInitialQCPlotFields();
-        assertEquals("2014-07-20", qcPlotsWebPart.getCurrentStartDate());
+        // the date fields hold the default "Last 180 days" window from page load, which is inclusive of both ends: 2015-01-16 - 179
+        assertEquals("2014-07-21", qcPlotsWebPart.getCurrentStartDate());
         assertEquals("2015-01-16", qcPlotsWebPart.getCurrentEndDate());
 
         // Check for the newly added precursors.
@@ -1192,7 +1206,7 @@ public class TargetedMSQCTest extends TargetedMSTest
         qcPlotsWebPart = qcDashboard.getQcPlotsWebPart();
 
         plots = qcPlotsWebPart.getPlots();
-        firstPlot = plots.get(0);
+        firstPlot = plots.getFirst();
 
         assertFalse("Zoom should not persist after page reload", qcPlotsWebPart.isZoomActive(firstPlot));
     }
@@ -1217,7 +1231,7 @@ public class TargetedMSQCTest extends TargetedMSTest
     private void checkForCorrectAnnotations(String plotType, QCPlotsWebPart qcPlotsWebPart)
     {
         List<QCPlot> qcPlots = qcPlotsWebPart.getPlots();
-        Bag<QCHelper.Annotation> expectedAnnotations = new HashBag<>();
+        MultiSet<QCHelper.Annotation> expectedAnnotations = new HashMultiSet<>();
         expectedAnnotations.add(instrumentChange);
         expectedAnnotations.add(reagentChange);
         expectedAnnotations.add(technicianChange);
@@ -1225,7 +1239,7 @@ public class TargetedMSQCTest extends TargetedMSTest
         for (QCPlot plot : qcPlots)
         {
             log("verifying for qc plot - " + plot.getPlot().getText());
-            Bag<QCHelper.Annotation> plotAnnotations = new HashBag<>(plot.getAnnotations());
+            MultiSet<QCHelper.Annotation> plotAnnotations = new HashMultiSet<>(plot.getAnnotations());
             assertEquals("Wrong annotations in " + plotType + ":" + plot.getPrecursor(), expectedAnnotations, plotAnnotations);
         }
     }
